--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,5 +17,8 @@ LinkingTo:
 Imports: 
     Rcpp
 Suggests: 
+    knitr,
+    rmarkdown,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
+VignetteBuilder: knitr
